MacViews: Implement generic avatar button

Bug: 826745
Change-Id: I635382607d4c39e04a51cc628f71d045f4e5dcd1
Reviewed-on: https://chromium-review.googlesource.com/987528
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Leonard Grey <lgrey@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547215}